setup(): tailwind intial setup

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
     "@pinia/nuxt": "^0.5.1",
+    "@tailwindcss/cli": "^4.1.13",
     "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/vite": "^4.1.13",
     "chart.js": "^4.4.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.38",
@@ -26,7 +28,7 @@
     "autoprefixer": "^10.4.16",
     "jsdom": "^23.0.1",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.5.3",
     "vite": "^5.4.2",
     "vitest": "^1.0.0",
