--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "vite build",
+    "build:check": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -24,12 +25,14 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@types/node": "^24.5.2",
     "@vitejs/plugin-vue": "^5.1.3",
     "@vue/test-utils": "^2.4.2",
     "autoprefixer": "^10.4.16",
     "jsdom": "^23.0.1",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
+    "terser": "^5.44.0",
     "typescript": "^5.5.3",
     "vite": "^5.4.2",
     "vitest": "^1.0.0",
