--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,10 +29,10 @@ jobs:
     - name: Build project
       run: npm run build
       
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./dist
-        cname: finflow.com  # Optional: replace with your custom domain
+     - name: Deploy to GitHub Pages
+       uses: peaceiris/actions-gh-pages@v3
+       if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
+       with:
+         personal_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+         publish_dir: ./dist
+         cname: finflow.com  # Optional: replace with your custom domain
