--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -32,6 +32,9 @@ jobs:
         
       - name: Build project
         run: npm run build
+          
+      - name: Copy 404.html for GitHub Pages SPA support
+        run: cp public/404.html dist/404.html
         
       - name: Setup Pages
         uses: actions/configure-pages@v4
