--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,11 @@ jobs:
     - name: Run tests
       run: npm test
       
-    - name: Build project
-      run: npm run build
+     - name: Build project
+       run: npm run build
+       
+     - name: Copy 404.html for GitHub Pages SPA support
+       run: cp public/404.html dist/404.html
       
      - name: Deploy to GitHub Pages
        uses: peaceiris/actions-gh-pages@v3
