--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
       run: npm test
       
      - name: Build project
-       run: npm run build
+       run: npm run build:github
        
      - name: Copy 404.html for GitHub Pages SPA support
        run: cp public/404.html dist/404.html
