--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:github": "cross-env VITE_BASE_URL=/payments-management-frontend/ vite build",
+    "build:vercel": "cross-env VITE_BASE_URL=/ vite build",
     "build:check": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "test": "vitest",
@@ -29,6 +31,7 @@
     "@vitejs/plugin-vue": "^5.1.3",
     "@vue/test-utils": "^2.4.2",
     "autoprefixer": "^10.4.16",
+    "cross-env": "^10.0.0",
     "jsdom": "^23.0.1",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
